Texto en Ayuda y Acerca de y style bonito

--- a/res/layout/ayuda_layout.xml
+++ b/res/layout/ayuda_layout.xml
@@ -2,14 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
+    android:layout_height="fill_parent">
 <TextView  
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
-    android:text="@string/content_ayuda"
-    />
+    android:textSize="25sp"
+    android:text="@string/content_ayuda1" />
+<TextView  
+    android:layout_width="fill_parent" 
+    android:layout_height="wrap_content" 
+    android:text="@string/content_ayuda2" />
 <Button style="@style/BatidoCoco"
    		android:id="@+id/cocoBtn" 
-        android:text="@string/button_batido"  />
+        android:text="@string/button_batido" />
 </LinearLayout>
