--- a/res/layout/reminder_edit.xml
+++ b/res/layout/reminder_edit.xml
@@ -4,52 +4,50 @@
 	android:orientation="vertical" android:layout_width="match_parent"
 	android:layout_height="match_parent">
 	
-	<LinearLayout android:orientation="horizontal"
+	<ScrollView android:layout_width="fill_parent"
+		android:layout_height="fill_parent">
+		
+		<LinearLayout android:orientation="vertical"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content">
+		android:layout_height="fill_parent">
 
-		<TextView android:layout_width="wrap_content"
+			<TextView android:layout_width="wrap_content"
 			android:layout_height="wrap_content" 
 			android:text="@string/title" />
-		<EditText android:id="@+id/title" 
-		  android:layout_width="wrap_content"
+			<EditText android:id="@+id/title" 
+		 	 android:layout_width="fill_parent"
 			android:layout_height="wrap_content" 
 			android:layout_weight="1"/>
-	</LinearLayout>
 
-	<TextView android:layout_width="wrap_content"
-		android:layout_height="wrap_content" 
-		android:text="@string/body" />
-	<EditText android:id="@+id/body" android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_weight="0.5"
-		android:scrollbars="vertical" />
+			<TextView android:layout_width="wrap_content"
+			android:layout_height="wrap_content" 
+			android:text="@string/body" />
+			<EditText android:id="@+id/body" android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_weight="0.5"
+			android:scrollbars="vertical" />
 		
-	<TextView android:layout_width="wrap_content"
-		android:layout_height="wrap_content" 
-		android:text="@string/email" />
-	<EditText android:id="@+id/email" android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:scrollbars="vertical" />
-		
-	<LinearLayout android:orientation="horizontal"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content">
+			<TextView android:layout_width="wrap_content"
+			android:layout_height="wrap_content" 
+			android:text="@string/email" />
+			<EditText android:id="@+id/email" android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:scrollbars="vertical" />
 			
-	<TextView android:id="@+id/dateDisplay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""/>
+			<TextView android:id="@+id/dateDisplay"
+       	 	android:layout_width="wrap_content"
+       	 	android:layout_height="wrap_content"
+       	 	android:text=""/>
         
-   	<Button android:id="@+id/pickDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Seleccione fecha" />		
-	</LinearLayout>
+   			<Button android:id="@+id/pickDate"
+        	android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:text="Seleccione fecha" />		
 	
-	<Button android:id="@+id/confirm" 
-	  android:text="@string/confirm"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content" />
-
+			<Button android:id="@+id/confirm" 
+	  		android:text="@string/confirm"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content" />
+		</LinearLayout>
+	</ScrollView>
 </LinearLayout>
