--- a/res/layout/reminder_view.xml
+++ b/res/layout/reminder_view.xml
@@ -11,32 +11,38 @@
 		android:layout_width="match_parent"
 		android:layout_height="fill_parent">
 
-			<TextView android:layout_width="wrap_content"
-			android:layout_height="wrap_content" 
+			<TextView style ="@style/titulos"
 			android:text="@string/title" />
 			<TextView android:id="@+id/title" 
 		 	 android:layout_width="fill_parent"
 			android:layout_height="wrap_content" 
 			android:layout_weight="1"/>
 
-			<TextView android:layout_width="wrap_content"
-			android:layout_height="wrap_content" 
+			<TextView style ="@style/titulos" 
 			android:text="@string/body" />
 			<TextView android:id="@+id/body" android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_weight="0.5"
 			android:scrollbars="vertical" />
-		
-			<TextView android:layout_width="wrap_content"
-			android:layout_height="wrap_content" 
-			android:text="@string/email" />
-			<TextView android:id="@+id/email" android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:scrollbars="vertical" />
+
+			<LinearLayout
+			    android:layout_width="match_parent"
+			    android:layout_height="wrap_content" >
+
+				<TextView
+				    style="@style/titulos"
+				    android:text="@string/email" />
+
+				<TextView
+				    android:id="@+id/email"
+				    android:layout_width="match_parent"
+				    android:layout_height="wrap_content"
+				    android:scrollbars="vertical" />
+
+			</LinearLayout>
 			
 			<TextView android:id="@+id/dateDisplay"
-       	 	android:layout_width="wrap_content"
-       	 	android:layout_height="wrap_content"
+       	 	style ="@style/titulos" 
        	 	android:text=""/>
         
 		</LinearLayout>
