--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -17,4 +17,10 @@
         <item name="android:textColor">#093004</item>
         <item name="android:textSize">15sp</item>
     </style>
+    <style name= "titulos" >
+        <item name ="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/letras</item>
+        <item name="android:textSize">27sp</item>
+    </style>
 </resources>
