--- a/res/layout/acercade_view.xml
+++ b/res/layout/acercade_view.xml
@@ -2,11 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
+    android:layout_height="fill_parent" >
+	<TextView 
+	    android:textSize="25sp" 
+    	android:layout_width="fill_parent" 
+    	android:layout_height="wrap_content" 
+    	android:text="@string/content_acercade1"/>
 	<TextView  
     	android:layout_width="fill_parent" 
     	android:layout_height="wrap_content" 
-    	android:text="@string/content_acercade"
-    />
+    	android:text="@string/content_acercade2"/>
 </LinearLayout>
