--- a/res/layout/reminder_edit.xml
+++ b/res/layout/reminder_edit.xml
@@ -1,53 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical" android:layout_width="match_parent"
-	android:layout_height="match_parent">
-	
-	<ScrollView android:layout_width="fill_parent"
-		android:layout_height="fill_parent">
-		
-		<LinearLayout android:orientation="vertical"
-		android:layout_width="match_parent"
-		android:layout_height="fill_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 
-			<TextView android:layout_width="wrap_content"
-			android:layout_height="wrap_content" 
-			android:text="@string/title" />
-			<EditText android:id="@+id/title" 
-		 	 android:layout_width="fill_parent"
-			android:layout_height="wrap_content" 
-			android:layout_weight="1"/>
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" >
 
-			<TextView android:layout_width="wrap_content"
-			android:layout_height="wrap_content" 
-			android:text="@string/body" />
-			<EditText android:id="@+id/body" android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_weight="0.5"
-			android:scrollbars="vertical" />
-		
-			<TextView android:layout_width="wrap_content"
-			android:layout_height="wrap_content" 
-			android:text="@string/email" />
-			<EditText android:id="@+id/email" android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:scrollbars="vertical" />
-			
-			<TextView android:id="@+id/dateDisplay"
-       	 	android:layout_width="wrap_content"
-       	 	android:layout_height="wrap_content"
-       	 	android:text=""/>
-        
-   			<Button android:id="@+id/pickDate"
-        	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        	android:text="Seleccione fecha" />		
-	
-			<Button android:id="@+id/confirm" 
-	  		android:text="@string/confirm"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content" />
-		</LinearLayout>
-	</ScrollView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/title" />
+
+            <EditText
+                android:id="@+id/title"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/body" />
+
+            <EditText
+                android:id="@+id/body"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:scrollbars="vertical" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/email" />
+
+            <EditText
+                android:id="@+id/email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:scrollbars="vertical" />
+
+            <TextView
+                android:id="@+id/dateDisplay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="" />
+
+            <Button
+                android:id="@+id/pickDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Seleccione fecha" />
+
+            <Button
+                android:id="@+id/confirm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/confirm" />
+        </LinearLayout>
+    </ScrollView>
+
 </LinearLayout>
