--- a/res/layout/reminder_view.xml
+++ b/res/layout/reminder_view.xml
@@ -1,52 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical" android:layout_width="match_parent"
-	android:layout_height="match_parent">
-	
-	<ScrollView android:layout_width="fill_parent"
-		android:layout_height="fill_parent">
-		
-		<LinearLayout android:orientation="vertical"
-		android:layout_width="match_parent"
-		android:layout_height="fill_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 
-			<TextView style ="@style/titulos"
-			android:text="@string/title" />
-			<TextView android:id="@+id/title" 
-		 	 android:layout_width="fill_parent"
-			android:layout_height="wrap_content" 
-			android:layout_weight="1"/>
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" >
 
-			<TextView style ="@style/titulos" 
-			android:text="@string/body" />
-			<TextView android:id="@+id/body" android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_weight="0.5"
-			android:scrollbars="vertical" />
-			
-			<TextView android:id="@+id/dateDisplay"
-       	 	style ="@style/titulos" 
-       	 	android:text=""/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical" >
 
-			<LinearLayout
-			    android:layout_width="match_parent"
-			    android:layout_height="wrap_content" >
-				<TextView
-				    style="@style/titulos"
-				    android:text="@string/email" />
-				<TextView
-				    android:id="@+id/email"
-				    android:layout_width="match_parent"
-				    android:layout_height="wrap_content"
-				    android:scrollbars="vertical" />
-			</LinearLayout>
-			
-			<Button android:id="@+id/emailbtn"
-			android:layout_width="wrap_content" 
-			android:layout_height="wrap_content"
-        	android:text="@string/button_mail" />
-        
-		</LinearLayout>
-	</ScrollView>
+            <TextView
+                style="@style/titulos"
+                android:text="@string/title" />
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <TextView
+                style="@style/titulos"
+                android:text="@string/body" />
+
+            <TextView
+                android:id="@+id/body"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:scrollbars="vertical" />
+
+            <TextView
+                android:id="@+id/dateDisplay"
+                style="@style/titulos"
+                android:text="" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+
+                <TextView
+                    style="@style/titulos"
+                    android:text="@string/email" />
+
+                <TextView
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:scrollbars="vertical" />
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/emailbtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/button_mail" />
+        </LinearLayout>
+    </ScrollView>
+
 </LinearLayout>
